@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.104 2008-06-26 18:41:00 nicm Exp $
+# $Id: GNUmakefile,v 1.105 2008-06-26 20:13:03 nicm Exp $
 
 .PHONY: clean
 
@@ -46,7 +46,7 @@ SRCS= fdm.c \
       match-in-cache.c match-matched.c match-regexp.c match-size.c \
       match-string.c match-tagged.c match-unmatched.c match-account.c \
       parent-deliver.c parent-fetch.c \
-      lookup.c lookup-passwd.c \
+      lookup.c lookup-passwd.c lookup-courier.c \
       y.tab.c parse-fn.c lex.c
 
 ifeq ($(shell uname),Darwin)
@@ -86,6 +86,11 @@ CFLAGS+= -Wno-long-long -Wall -W -Wnested-externs -Wformat=2
 CFLAGS+= -Wmissing-prototypes -Wstrict-prototypes -Wmissing-declarations
 CFLAGS+= -Wwrite-strings -Wshadow -Wpointer-arith -Wcast-qual -Wsign-compare
 CFLAGS+= -Wundef -Wshadow -Wbad-function-cast -Winline -Wcast-align
+
+ifdef COURIER
+CFLAGS+= -DLOOKUP_COURIER
+LIBS+= -lcourierauth
+endif
 
 ifdef PCRE
 DEFS+= -DPCRE
