@@ -52,8 +52,7 @@
 - regress fails as root
 - rml could be stored as actual tags, then command0-9 could go... means
   copying... get rid of %0
-- document deliver imap
 - add FAQ entry about no-apop since there are several servers out there
   which claim to support it but do not
-- lookup uid/gid/home in eg courier-authlib
-  	 document lookup-order
+- document deliver imap
+- ddocument lookup-order and courier-authlib support
