@@ -1,5 +1,7 @@
 26 June 2008
 
+* Lookup using courier-authlib. Build with make -DLOOKUP_COURIER and
+  use "set lookup-order { courier passwd }".
 * Framework for changing user lookup method. At the moment only normal
   Unix passwd (getpwnam(3)) is supported.
 * Get rid of from-headers which was ugly and unreliable.
@@ -839,4 +841,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.196 2008-06-26 18:41:00 nicm Exp $
+$Id: CHANGES,v 1.197 2008-06-26 20:13:02 nicm Exp $
